--- a/docs/xrefmap.yml
+++ b/docs/xrefmap.yml
@@ -69,82 +69,6 @@ references:
   name: '@esfx/async-canceltoken'
   href: api/async-canceltoken.html
   fullName: '@esfx/async-canceltoken'
-- uid: '@esfx/async-canceltoken!CancelSource#cancel:member(1)'
-  name: cancel(reason)
-  href: api/async-canceltoken/cancelsource.html#_esfx_async_canceltoken_CancelSource_cancel_member_1_
-  fullName: CancelSource.cancel(reason)
-- uid: '@esfx/async-canceltoken!CancelSource#close:member(1)'
-  name: close()
-  href: api/async-canceltoken/cancelsource.html#_esfx_async_canceltoken_CancelSource_close_member_1_
-  fullName: CancelSource.close()
-- uid: '@esfx/async-canceltoken!CancelSource#token:member'
-  name: token
-  href: api/async-canceltoken/cancelsource.html#_esfx_async_canceltoken_CancelSource_token_member
-  fullName: CancelSource.token
-- uid: '@esfx/async-canceltoken!CancelSource:interface'
-  name: CancelSource
-  href: api/async-canceltoken/cancelsource.html#_esfx_async_canceltoken_CancelSource_interface
-  fullName: CancelSource
-- uid: '@esfx/async-canceltoken!CancelToken#[Cancelable.cancelSignal]:member(1)'
-  name: '[Cancelable.cancelSignal]()'
-  href: api/async-canceltoken/canceltoken.html#_esfx_async_canceltoken_CancelToken__Cancelable_cancelSignal__member_1_
-  fullName: CancelToken.[Cancelable.cancelSignal]()
-- uid: '@esfx/async-canceltoken!CancelToken#canBeSignaled:member'
-  name: canBeSignaled
-  href: api/async-canceltoken/canceltoken.html#_esfx_async_canceltoken_CancelToken_canBeSignaled_member
-  fullName: CancelToken.canBeSignaled
-- uid: '@esfx/async-canceltoken!CancelToken#reason:member'
-  name: reason
-  href: api/async-canceltoken/canceltoken.html#_esfx_async_canceltoken_CancelToken_reason_member
-  fullName: CancelToken.reason
-- uid: '@esfx/async-canceltoken!CancelToken#signaled:member'
-  name: signaled
-  href: api/async-canceltoken/canceltoken.html#_esfx_async_canceltoken_CancelToken_signaled_member
-  fullName: CancelToken.signaled
-- uid: '@esfx/async-canceltoken!CancelToken#subscribe:member(1)'
-  name: subscribe(onSignaled)
-  href: api/async-canceltoken/canceltoken.html#_esfx_async_canceltoken_CancelToken_subscribe_member_1_
-  fullName: CancelToken.subscribe(onSignaled)
-- uid: '@esfx/async-canceltoken!CancelToken#throwIfSignaled:member(1)'
-  name: throwIfSignaled()
-  href: api/async-canceltoken/canceltoken.html#_esfx_async_canceltoken_CancelToken_throwIfSignaled_member_1_
-  fullName: CancelToken.throwIfSignaled()
-- uid: '@esfx/async-canceltoken!CancelToken.all:member(1)'
-  name: all(cancelables)
-  href: api/async-canceltoken/canceltoken.html#_esfx_async_canceltoken_CancelToken_all_member_1_
-  fullName: CancelToken.all(cancelables)
-- uid: '@esfx/async-canceltoken!CancelToken.canceled:member'
-  name: canceled
-  href: api/async-canceltoken/canceltoken.html#_esfx_async_canceltoken_CancelToken_canceled_member
-  fullName: CancelToken.canceled
-- uid: '@esfx/async-canceltoken!CancelToken.canceledWith:member(1)'
-  name: canceledWith(reason)
-  href: api/async-canceltoken/canceltoken.html#_esfx_async_canceltoken_CancelToken_canceledWith_member_1_
-  fullName: CancelToken.canceledWith(reason)
-- uid: '@esfx/async-canceltoken!CancelToken.from:member(1)'
-  name: from(cancelable)
-  href: api/async-canceltoken/canceltoken.html#_esfx_async_canceltoken_CancelToken_from_member_1_
-  fullName: CancelToken.from(cancelable)
-- uid: '@esfx/async-canceltoken!CancelToken.none:member'
-  name: none
-  href: api/async-canceltoken/canceltoken.html#_esfx_async_canceltoken_CancelToken_none_member
-  fullName: CancelToken.none
-- uid: '@esfx/async-canceltoken!CancelToken.race:member(1)'
-  name: race(cancelables)
-  href: api/async-canceltoken/canceltoken.html#_esfx_async_canceltoken_CancelToken_race_member_1_
-  fullName: CancelToken.race(cancelables)
-- uid: '@esfx/async-canceltoken!CancelToken.source:member(1)'
-  name: source()
-  href: api/async-canceltoken/canceltoken.html#_esfx_async_canceltoken_CancelToken_source_member_1_
-  fullName: CancelToken.source()
-- uid: '@esfx/async-canceltoken!CancelToken.timeout:member(1)'
-  name: timeout(ms, reason)
-  href: api/async-canceltoken/canceltoken.html#_esfx_async_canceltoken_CancelToken_timeout_member_1_
-  fullName: CancelToken.timeout(ms, reason)
-- uid: '@esfx/async-canceltoken!CancelToken:class'
-  name: CancelToken
-  href: api/async-canceltoken/canceltoken.html#_esfx_async_canceltoken_CancelToken_class
-  fullName: CancelToken
 - uid: '@esfx/async-conditionvariable!'
   name: '@esfx/async-conditionvariable'
   href: api/async-conditionvariable.html
@@ -2857,6 +2781,86 @@ references:
   name: '@esfx/cancelable-dom-shim'
   href: api/cancelable-dom-shim.html
   fullName: '@esfx/cancelable-dom-shim'
+- uid: '@esfx/canceltoken!'
+  name: '@esfx/canceltoken'
+  href: api/canceltoken.html
+  fullName: '@esfx/canceltoken'
+- uid: '@esfx/canceltoken!CancelSource#cancel:member(1)'
+  name: cancel(reason)
+  href: api/canceltoken/cancelsource.html#_esfx_canceltoken_CancelSource_cancel_member_1_
+  fullName: CancelSource.cancel(reason)
+- uid: '@esfx/canceltoken!CancelSource#close:member(1)'
+  name: close()
+  href: api/canceltoken/cancelsource.html#_esfx_canceltoken_CancelSource_close_member_1_
+  fullName: CancelSource.close()
+- uid: '@esfx/canceltoken!CancelSource#token:member'
+  name: token
+  href: api/canceltoken/cancelsource.html#_esfx_canceltoken_CancelSource_token_member
+  fullName: CancelSource.token
+- uid: '@esfx/canceltoken!CancelSource:interface'
+  name: CancelSource
+  href: api/canceltoken/cancelsource.html#_esfx_canceltoken_CancelSource_interface
+  fullName: CancelSource
+- uid: '@esfx/canceltoken!CancelToken#[Cancelable.cancelSignal]:member(1)'
+  name: '[Cancelable.cancelSignal]()'
+  href: api/canceltoken/canceltoken.html#_esfx_canceltoken_CancelToken__Cancelable_cancelSignal__member_1_
+  fullName: CancelToken.[Cancelable.cancelSignal]()
+- uid: '@esfx/canceltoken!CancelToken#canBeSignaled:member'
+  name: canBeSignaled
+  href: api/canceltoken/canceltoken.html#_esfx_canceltoken_CancelToken_canBeSignaled_member
+  fullName: CancelToken.canBeSignaled
+- uid: '@esfx/canceltoken!CancelToken#reason:member'
+  name: reason
+  href: api/canceltoken/canceltoken.html#_esfx_canceltoken_CancelToken_reason_member
+  fullName: CancelToken.reason
+- uid: '@esfx/canceltoken!CancelToken#signaled:member'
+  name: signaled
+  href: api/canceltoken/canceltoken.html#_esfx_canceltoken_CancelToken_signaled_member
+  fullName: CancelToken.signaled
+- uid: '@esfx/canceltoken!CancelToken#subscribe:member(1)'
+  name: subscribe(onSignaled)
+  href: api/canceltoken/canceltoken.html#_esfx_canceltoken_CancelToken_subscribe_member_1_
+  fullName: CancelToken.subscribe(onSignaled)
+- uid: '@esfx/canceltoken!CancelToken#throwIfSignaled:member(1)'
+  name: throwIfSignaled()
+  href: api/canceltoken/canceltoken.html#_esfx_canceltoken_CancelToken_throwIfSignaled_member_1_
+  fullName: CancelToken.throwIfSignaled()
+- uid: '@esfx/canceltoken!CancelToken.all:member(1)'
+  name: all(cancelables)
+  href: api/canceltoken/canceltoken.html#_esfx_canceltoken_CancelToken_all_member_1_
+  fullName: CancelToken.all(cancelables)
+- uid: '@esfx/canceltoken!CancelToken.canceled:member'
+  name: canceled
+  href: api/canceltoken/canceltoken.html#_esfx_canceltoken_CancelToken_canceled_member
+  fullName: CancelToken.canceled
+- uid: '@esfx/canceltoken!CancelToken.canceledWith:member(1)'
+  name: canceledWith(reason)
+  href: api/canceltoken/canceltoken.html#_esfx_canceltoken_CancelToken_canceledWith_member_1_
+  fullName: CancelToken.canceledWith(reason)
+- uid: '@esfx/canceltoken!CancelToken.from:member(1)'
+  name: from(cancelable)
+  href: api/canceltoken/canceltoken.html#_esfx_canceltoken_CancelToken_from_member_1_
+  fullName: CancelToken.from(cancelable)
+- uid: '@esfx/canceltoken!CancelToken.none:member'
+  name: none
+  href: api/canceltoken/canceltoken.html#_esfx_canceltoken_CancelToken_none_member
+  fullName: CancelToken.none
+- uid: '@esfx/canceltoken!CancelToken.race:member(1)'
+  name: race(cancelables)
+  href: api/canceltoken/canceltoken.html#_esfx_canceltoken_CancelToken_race_member_1_
+  fullName: CancelToken.race(cancelables)
+- uid: '@esfx/canceltoken!CancelToken.source:member(1)'
+  name: source(cancelables)
+  href: api/canceltoken/canceltoken.html#_esfx_canceltoken_CancelToken_source_member_1_
+  fullName: CancelToken.source(cancelables)
+- uid: '@esfx/canceltoken!CancelToken.timeout:member(1)'
+  name: timeout(ms, reason)
+  href: api/canceltoken/canceltoken.html#_esfx_canceltoken_CancelToken_timeout_member_1_
+  fullName: CancelToken.timeout(ms, reason)
+- uid: '@esfx/canceltoken!CancelToken:class'
+  name: CancelToken
+  href: api/canceltoken/canceltoken.html#_esfx_canceltoken_CancelToken_class
+  fullName: CancelToken
 - uid: '@esfx/collection-core!'
   name: '@esfx/collection-core'
   href: api/collection-core.html
