--- a/packages/async-barrier/tsconfig.json
+++ b/packages/async-barrier/tsconfig.json
@@ -12,7 +12,7 @@
         { "path": "../cancelable" },
 
         // devDependencies:
-        { "path": "../async-canceltoken" },
+        { "path": "../canceltoken" },
         { "path": "../../internal/guards" }
     ]
 }
