--- a/packages/async-autoresetevent/package.json
+++ b/packages/async-autoresetevent/package.json
@@ -26,7 +26,7 @@
         "@esfx/cancelable": "^1.0.0-pre.30"
     },
     "devDependencies": {
-        "@esfx/async-canceltoken": "^1.0.0-pre.30",
+        "@esfx/canceltoken": "^1.0.0-pre.30",
         "@esfx/internal-guards": "^1.0.0-pre.23"
     },
     "publishConfig": {
