--- a/packages/async-canceltoken/package.json
+++ b/packages/async-canceltoken/package.json
@@ -10,16 +10,6 @@
             "types": "./dist/types/index.d.ts",
             "require": "./dist/cjs/index.js",
             "import": "./dist/esm/index.js"
-        },
-        "./dom": {
-            "types": "./dist/types/dom.d.ts",
-            "require": "./dist/cjs/dom.js",
-            "import": "./dist/esm/dom.js"
-        }
-    },
-    "typesVersions": {
-        "*": {
-            "dom": ["./dist/types/dom.d.ts"]
         }
     },
     "author": "Ron Buckton (rbuckton@chronicles.org)",
@@ -32,10 +22,10 @@
         "url": "https://github.com/esfx/esfx/issues"
     },
     "scripts": {
-        "prebuild": "node scripts/generateDomEventTypes.js"
     },
     "dependencies": {
         "@esfx/cancelable": "^1.0.0-pre.30",
+        "@esfx/canceltoken": "^1.0.0-pre.30",
         "@esfx/disposable": "^1.0.0-pre.30",
         "tslib": "^2.3.1"
     },
