--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -7,6 +7,7 @@
         { "path": "./async-autoresetevent" },
         { "path": "./async-barrier" },
         { "path": "./async-canceltoken" },
+        { "path": "./canceltoken" },
         { "path": "./async-conditionvariable" },
         { "path": "./async-countdown" },
         { "path": "./async-deferred" },
