native hashCode bindings for node

--- a/packages/equatable/.npmignore
+++ b/packages/equatable/.npmignore
@@ -1,12 +1,13 @@
+/obj
+/src
+/dist/types/internal/*.d.ts
+/dist/types/internal/*.d.ts.map
+/dist/cjs/internal/murmur3.*
+/dist/esm/internal/murmur3.*
+/package.internal.d.ts
+/api-extractor.json
+/tsconfig*.json
+/*.tsbuildinfo
 .vscode
 __tests__
 __perf__
-obj
-src
-dist/types/internal/*.d.ts
-dist/types/internal/*.d.ts.map
-dist/cjs/internal/murmur3.*
-dist/esm/internal/murmur3.*
-api-extractor.json
-tsconfig*.json
-*.tsbuildinfo
