Enable jest projects

--- a/packages/disposable/tsconfig.json
+++ b/packages/disposable/tsconfig.json
@@ -3,7 +3,9 @@
     "compilerOptions": {
         "rootDir": "src",
         "outDir": "dist/cjs",
-        "declarationDir": "dist/types"
+        "declarationDir": "dist/types",
+        "lib": ["es2021"],
+        "downlevelIteration": true
     },
     "include": ["src/**/*.ts"],
     "references": [
