--- a/packages/disposable/.npmignore
+++ b/packages/disposable/.npmignore
@@ -1,9 +1,9 @@
-.vscode
+/.vscode
+/dist/*/internal/testUtils.*
+/obj
+/docsrc
+/src
 __tests__
-obj
-docsrc
-src
-internal
 api-extractor.json
 tsconfig*.json
 *.tsbuildinfo
