Add missing package.json stubs and disable native hashing

--- a/packages/equatable/package.json
+++ b/packages/equatable/package.json
@@ -14,7 +14,7 @@
     },
     "imports": {
         "#hashCode": {
-            "node": "./lib/hashCodeNative.js",
+            "//node": "./lib/hashCodeNative.js",
             "import": "./dist/esm/internal/hashCode.js",
             "require": "./dist/cjs/internal/hashCode.js"
         },
@@ -25,21 +25,21 @@
     "author": "Ron Buckton (rbuckton@chronicles.org)",
     "license": "Apache-2.0",
     "scripts": {
-        "install": "node-pre-gyp install --fallback-to-build",
-        "prebuild": "node-pre-gyp configure build --runtime=node --target_arch=x64",
         "prepack": "node ../../scripts/verifyPackage.js",
-        "build-node-win32-x64": "node-pre-gyp configure rebuild --runtime=node --target_arch=x64 --target_platform=win32",
-        "build-node-linux-x64": "node-pre-gyp configure rebuild --runtime=node --target_arch=x64 --target_platform=linux",
-        "build-node-darwin-x64": "node-pre-gyp configure rebuild --runtime=node --target_arch=x64 --target_platform=darwin",
-        "build-node": "yarn build-node-win32-x64 & yarn build-node-linux-x64 & yarn build-node-darwin-x64",
-        "prepackage-node": "node-pre-gyp clean",
-        "package-node-win32-x64": "node-pre-gyp configure build package --runtime=node --target_arch=x64 --target_platform=win32",
-        "package-node-linux-x64": "node-pre-gyp configure build package --runtime=node --target_arch=x64 --target_platform=linux",
-        "package-node-darwin-x64": "node-pre-gyp configure build package --runtime=node --target_arch=x64 --target_platform=darwin",
-        "package-node": "yarn package-node-win32-x64 & yarn package-node-linux-x64 & yarn package-node-darwin-x64",
-        "prepublish-native": "yarn package-node",
-        "publish-native": "node scripts/node-pre-gyp-github.js publish --name \"v{version}\" --body \"v{version}\" --release",
-        "prepublishOnly": "yarn publish-native"
+        "//install": "node-pre-gyp install --fallback-to-build",
+        "//prebuild": "node-pre-gyp configure build --runtime=node --target_arch=x64",
+        "//build-node-win32-x64": "node-pre-gyp configure rebuild --runtime=node --target_arch=x64 --target_platform=win32",
+        "//build-node-linux-x64": "node-pre-gyp configure rebuild --runtime=node --target_arch=x64 --target_platform=linux",
+        "//build-node-darwin-x64": "node-pre-gyp configure rebuild --runtime=node --target_arch=x64 --target_platform=darwin",
+        "//build-node": "yarn build-node-win32-x64 & yarn build-node-linux-x64 & yarn build-node-darwin-x64",
+        "//prepackage-node": "node-pre-gyp clean",
+        "//package-node-win32-x64": "node-pre-gyp configure build package --runtime=node --target_arch=x64 --target_platform=win32",
+        "//package-node-linux-x64": "node-pre-gyp configure build package --runtime=node --target_arch=x64 --target_platform=linux",
+        "//package-node-darwin-x64": "node-pre-gyp configure build package --runtime=node --target_arch=x64 --target_platform=darwin",
+        "//package-node": "yarn package-node-win32-x64 & yarn package-node-linux-x64 & yarn package-node-darwin-x64",
+        "//prepublish-native": "yarn package-node",
+        "//publish-native": "node scripts/node-pre-gyp-github.js publish --name \"v{version}\" --body \"v{version}\" --release",
+        "//prepublishOnly": "yarn publish-native"
     },
     "repository": {
         "type": "git",
