Support Equatable and StructuralEquatable on struct-type

--- a/packages/struct-type/package.json
+++ b/packages/struct-type/package.json
@@ -26,6 +26,7 @@
     },
     "dependencies": {
         "@esfx/type-model": "workspace:*",
+        "@esfx/equatable": "workspace:*",
         "tslib": "^2.4.0"
     },
     "publishConfig": {
