--- a/packages/equatable/package.json
+++ b/packages/equatable/package.json
@@ -9,14 +9,16 @@
         ".": {
             "types": "./dist/types/index.d.ts",
             "require": "./dist/cjs/index.js",
-            "import": "./dist/esm/index.js"
+            "import": "./dist/esm/index.js",
+            "browser": "./dist/esm/index.js"
         }
     },
     "imports": {
         "#hashCode": {
             "node": "./lib/hashCodeNative.js",
+            "require": "./dist/cjs/internal/hashCode.js",
             "import": "./dist/esm/internal/hashCode.js",
-            "require": "./dist/cjs/internal/hashCode.js"
+            "browser": "./dist/esm/internal/hashCode.js"
         },
         "#hashCodeNative": {
             "node": "./lib/hashCodeNative.js"
@@ -31,15 +33,9 @@
         "build-node-win32-x64": "node-pre-gyp configure rebuild --runtime=node --target_arch=x64 --target_platform=win32",
         "build-node-linux-x64": "node-pre-gyp configure rebuild --runtime=node --target_arch=x64 --target_platform=linux",
         "build-node-darwin-x64": "node-pre-gyp configure rebuild --runtime=node --target_arch=x64 --target_platform=darwin",
-        "//build-node": "yarn build-node-win32-x64 & yarn build-node-linux-x64 & yarn build-node-darwin-x64",
-        "//prepackage-node": "node-pre-gyp clean",
         "package-node-win32-x64": "node-pre-gyp configure rebuild package --runtime=node --target_arch=x64 --target_platform=win32",
         "package-node-linux-x64": "node-pre-gyp configure rebuild package --runtime=node --target_arch=x64 --target_platform=linux",
-        "package-node-darwin-x64": "node-pre-gyp configure rebuild package --runtime=node --target_arch=x64 --target_platform=darwin",
-        "//package-node": "yarn package-node-win32-x64 & yarn package-node-linux-x64 & yarn package-node-darwin-x64",
-        "//prepublish-native": "yarn package-node",
-        "//publish-native": "node scripts/node-pre-gyp-github.js publish --name \"v{version}\" --body \"v{version}\" --release",
-        "//prepublishOnly": "yarn publish-native"
+        "package-node-darwin-x64": "node-pre-gyp configure rebuild package --runtime=node --target_arch=x64 --target_platform=darwin"
     },
     "repository": {
         "type": "git",
