--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   "scripts": {
     "test": "gulp test",
     "clean": "gulp clean",
-    "prebuild": "yarn workspace @esfx/canceltoken run prebuild && yarn workspace @esfx/equatable run prebuild",
-    "build-js": "gulp clean & yarn prebuild & gulp build --no-prebuild",
-    "build-windows": "yarn workspace @esfx/equatable run package-node-win32-x64",
-    "build-linux": "yarn workspace @esfx/equatable run package-node-linux-x64",
-    "build-macos": "yarn workspace @esfx/equatable run package-node-darwin-x64"
+    "prebuild": "workspaces-foreach run prebuild",
+    "ci": "gulp ci",
+    "build-windows": "gulp build-windows",
+    "build-linux": "gulp build-linux",
+    "build-macos": "gulp build-macos"
   },
   "bugs": {
     "url": "https://github.com/esfx/esfx/issues"
@@ -51,6 +51,7 @@
     "diff": "^5.0.0",
     "extract-zip": "^2.0.1",
     "fancy-log": "^1.3.3",
+    "find-yarn-workspace-root": "^2.0.0",
     "gulp": "^4.0.2",
     "is-core-module": "^2.2.0",
     "jest": "^26.6.3",
@@ -64,6 +65,8 @@
     "ts-node": "^9.1.1",
     "typescript": "^4.6.1-rc",
     "yargs": "^16.2.0",
-    "yargs-unparser": "^2.0.0"
-  }
+    "yargs-unparser": "^2.0.0",
+    "workspaces-foreach": "file:scripts/workspaces-foreach"
+  },
+  "dependencies": {}
 }
