--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,11 +32,7 @@ on:
         required: false
         type: boolean
         default: true
-      what_if:
-        description: what if?
-        required: false
-        type: boolean
-        default: true
+
 jobs:
   version:
     runs-on: ubuntu-latest
@@ -153,6 +149,8 @@ jobs:
         yarn run test --selectProjects "async-iter-fn async-iter-fromsync async-iter-query iter-fn iter-lookup iter-query"
         yarn run test --selectProjects "threading-autoresetevent threading-conditionvariable threading-manualresetevent threading-mutex threading-sleep"
         yarn run test --selectProjects "decorators disposable equatable equatable-shim fn fn-partial indexed-object lazy ref reflect-metadata-compat struct-type"
+    - name: verify
+      run: gulp verify
     - name: download native artifacts
       uses: actions/download-artifact@v3
       with:
@@ -161,7 +159,6 @@ jobs:
     - name: verify
       run: yarn workspaces run prepack
     - name: commit and tag version
-      if: ${{ !github.event.inputs.what_if }}
       run: |
         git config user.name "GitHub Actions Bot"
         git config user.email "<>"
@@ -170,12 +167,10 @@ jobs:
         git tag -f "v${{ github.event.inputs.version }}" -m "v${{ github.event.inputs.version }}"
         git push --follow-tags --no-verify --atomic origin ${{ github.ref_name }}
     - name: collect native artifacts
-      if: ${{ !github.event.inputs.what_if }}
       id: native_artifacts
       run: |
         echo "::set-output name=native_artifacts::$(NATIVE_ARTIFACTS=$(find packages/* internal/* -path '*/*/build/stage/*/*.tar.gz') node -e 'process.stdout.write(JSON.stringify(process.env.NATIVE_ARTIFACTS.split(/\n/g).filter(Boolean)))')";
     - name: release
-      if: ${{ !github.event.inputs.what_if }}
       uses: ncipollo/release-action@v1
       with:
         artifacts: ${{ join(fromJson(steps.native_artifacts.outputs.native_artifacts)) }}
@@ -183,7 +178,6 @@ jobs:
         prerelease: ${{ github.event.inputs.prerelease }}
         tag: "v${{ github.event.inputs.version }}"
     - name: publish to npm
-      if: ${{ !github.event.inputs.what_if }}
       run: |
         lerna publish from-git --yes --no-verify-access --dist-tag ${{ github.event.inputs.dist_tag }}
       env:
