--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -158,27 +158,36 @@ jobs:
         path: ${{ github.workspace }}
     - name: verify
       run: yarn workspaces run prepack
-    - name: commit and tag version
-      run: |
-        git config user.name "GitHub Actions Bot"
-        git config user.email "<>"
-        git add -- ${{ join(fromJson(needs.version.outputs.changed_files), ' ') }}
-        git commit -m "v${{ github.event.inputs.version }}"
-        git tag -f "v${{ github.event.inputs.version }}" -m "v${{ github.event.inputs.version }}"
-        git push --follow-tags --no-verify --atomic origin ${{ github.ref_name }}
+    # - name: commit and tag version
+    #   run: |
+    #     git config user.name "GitHub Actions Bot"
+    #     git config user.email "<>"
+    #     git add -- ${{ join(fromJson(needs.version.outputs.changed_files), ' ') }}
+    #     git commit -m "v${{ github.event.inputs.version }}"
+    #     git tag -f "v${{ github.event.inputs.version }}" -m "v${{ github.event.inputs.version }}"
+    #     git push --follow-tags --no-verify --atomic origin ${{ github.ref_name }}
     - name: collect native artifacts
       id: native_artifacts
       run: |
         echo "::set-output name=native_artifacts::$(NATIVE_ARTIFACTS=$(find packages/* internal/* -path '*/*/build/stage/*/*.tar.gz') node -e 'process.stdout.write(JSON.stringify(process.env.NATIVE_ARTIFACTS.split(/\n/g).filter(Boolean)))')";
-    - name: release
-      uses: ncipollo/release-action@v1
-      with:
-        artifacts: ${{ join(fromJson(steps.native_artifacts.outputs.native_artifacts)) }}
-        draft: ${{ github.event.inputs.draft }}
-        prerelease: ${{ github.event.inputs.prerelease }}
-        tag: "v${{ github.event.inputs.version }}"
-    - name: publish to npm
+    - name: pack
+      id: pack
+      if: ${{ github.event.inputs.draft }}
       run: |
-        lerna publish from-git --yes --no-verify-access --dist-tag ${{ github.event.inputs.dist_tag }}
-      env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+        echo "::set-output name=pack_outputs::$(node node_modules\workspaces-foreach pack --silent --json)";
+    - name: check pack output
+      run: |
+        echo ${{ steps.pack.outputs.pack_outputs }}
+    # - name: release
+    #   uses: ncipollo/release-action@v1
+    #   with:
+    #     artifacts: ${{ join(fromJson(steps.native_artifacts.outputs.native_artifacts)) }}
+    #     draft: ${{ github.event.inputs.draft }}
+    #     prerelease: ${{ github.event.inputs.prerelease }}
+    #     tag: "v${{ github.event.inputs.version }}"
+    # - name: publish to npm
+    #   if: ${{ !github.event.inputs.draft }}
+    #   run: |
+    #     lerna publish from-git --yes --no-verify-access --dist-tag ${{ github.event.inputs.dist_tag }}
+    #   env:
+    #     NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
